# rtacc

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: constants.env
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  cppsupp.txt
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/rtacc/: sample_library.hpp
include/rtacc/ingest/: ingest.hpp  ingestor.hpp  ingestor_factory.hpp  ingestor_impl.hpp
include/rtacc/io/: file.hpp
include/rtacc/processing/: definitions.hpp  executor.hpp  executor_factory.hpp  manager.hpp  node.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/ingest/: CMakeLists.txt  buffered_file_ingestor.cpp  buffered_file_ingestor.hpp  file_ingestor.cpp  file_ingestor.hpp  ingestor_factory.cpp
src/io/: CMakeLists.txt  file.cpp
src/processing/: CMakeLists.txt  asio_thread_pool_executor.cpp  asio_thread_pool_executor.hpp  executor_factory.cpp  manager.cpp  node.cpp
src/sample/: CMakeLists.txt  buffered_file_ingestor.cpp  buffered_file_ingestor.hpp  file_ingestor.hpp  line_reader.hpp  main.cpp  sleep.cpp  sleep.hpp  stdin_line_reader.cpp  stdin_line_reader.hpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
